--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_switch: ^0.3.2
   image_picker: ^1.0.4
   get: ^4.7.2
+  emoji_picker_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
